--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="min">00</div>
             <div id="sec">00</div>
             <div id="ms">00</div>
-        </div>
+        </div><hr>
         <div id="btn">
             <button id="star" onclick="start()">Start</button>
             <button onclick="pause()">Pause</button>
@@ -26,4 +26,3 @@
     <script src="app.js"></script>
 </body>
 </html>
-
